import type { LoopRow, LoopLargeFields } from '../storage/repos/loops-repo'

interface LoopStateBase {
  active: boolean
  sessionId: string
  loopName: string
  worktreeDir: string
  projectDir?: string
  worktreeBranch?: string
  iteration: number
  maxIterations: number
  startedAt: string
  prompt?: string
  lastAuditResult?: string
  postActionReport?: string
  errorCount: number
  auditCount: number
  status: LoopRow['status']
  terminationReason?: string
  completedAt?: string
  worktree?: boolean
  modelFailed?: boolean
  sandbox?: boolean
  sandboxContainer?: string
  completionSummary?: string
  executionModel?: string
  auditorModel?: string
  workspaceId?: string
  hostSessionId?: string
  /** Goal-loop coding session binding. Undefined for plan loops and while a goal loop is auditing. */
  executorSessionId?: string
  /** Index into the auditor model fallback chain; 0 is the preferred model. */
  auditorFallbackIndex?: number
  currentSectionIndex: number
  totalSections: number
  finalAuditDone: boolean
  executionVariant?: string
  auditorVariant?: string
  /** Discriminator: plan loops persist a plan; goal loops persist goal text only. */
  kind?: 'plan' | 'goal'
  /** Goal text for goal loops. Undefined for plan loops. */
  goal?: string
}

export interface CodingState extends LoopStateBase {
  phase: 'coding'
}

export interface AuditingState extends LoopStateBase {
  phase: 'auditing'
}

export interface FinalAuditingState extends LoopStateBase {
  phase: 'final_auditing'
}

export interface PostActionState extends LoopStateBase {
  phase: 'post_action'
}

export interface FinalAuditFixState extends LoopStateBase {
  phase: 'final_audit_fix'
}

export type LoopState = CodingState | AuditingState | FinalAuditingState | PostActionState | FinalAuditFixState

export function auditScope(state: Pick<LoopState, 'phase' | 'kind' | 'totalSections' | 'currentSectionIndex'>): string {
  if (state.phase === 'final_auditing' || state.phase === 'final_audit_fix') return 'final'
  if (state.kind === 'goal') return 'goal'
  return state.totalSections > 0 ? `section:${state.currentSectionIndex}` : 'plan'
}

export function loopRowToState(row: LoopRow, large?: LoopLargeFields | null): LoopState {
  const base = {
    active: row.status === 'running',
    sessionId: row.currentSessionId,
    loopName: row.loopName,
    worktreeDir: row.worktreeDir,
    projectDir: row.projectDir,
    worktreeBranch: row.worktreeBranch ?? undefined,
    iteration: row.iteration,
    maxIterations: row.maxIterations,
    startedAt: new Date(row.startedAt).toISOString(),
    lastAuditResult: large?.lastAuditResult ?? undefined,
    postActionReport: large?.postActionReport ?? undefined,
    errorCount: row.errorCount,
    auditCount: row.auditCount,
    status: row.status,
    terminationReason: row.terminationReason ?? undefined,
    completedAt: row.completedAt ? new Date(row.completedAt).toISOString() : undefined,
    worktree: row.worktree,
    modelFailed: row.modelFailed,
    sandbox: row.sandbox,
    sandboxContainer: row.sandboxContainer ?? undefined,
    completionSummary: row.completionSummary ?? undefined,
    executionModel: row.executionModel ?? undefined,
    auditorModel: row.auditorModel ?? undefined,
    workspaceId: row.workspaceId ?? undefined,
    hostSessionId: row.hostSessionId ?? undefined,
    executorSessionId: row.executorSessionId ?? undefined,
    auditorFallbackIndex: row.auditorFallbackIndex ?? 0,
    currentSectionIndex: row.currentSectionIndex,
    totalSections: row.totalSections,
    finalAuditDone: row.finalAuditDone === 1,
    executionVariant: row.executionVariant ?? undefined,
    auditorVariant: row.auditorVariant ?? undefined,
    kind: row.kind,
    goal: large?.goal ?? undefined,
  }

  switch (row.phase) {
    case 'coding':
      return { ...base, phase: 'coding' } satisfies CodingState
    case 'auditing':
      return { ...base, phase: 'auditing' } satisfies AuditingState
    case 'final_auditing':
      return { ...base, phase: 'final_auditing' } satisfies FinalAuditingState
    case 'post_action':
      return { ...base, phase: 'post_action' } satisfies PostActionState
    case 'final_audit_fix':
      return { ...base, phase: 'final_audit_fix' } satisfies FinalAuditFixState
  }
}

/**
 * Section index recorded on a loop_transitions row: the current section for
 * sectioned loops, null for goal/non-sectioned loops. Single source of truth
 * for every transition-recording call site.
 */
export function transitionSectionIndex(state: Pick<LoopState, 'totalSections' | 'currentSectionIndex'>): number | null {
  return state.totalSections > 0 ? (state.currentSectionIndex ?? 0) : null
}

export function loopStateToRow(state: LoopState, projectId: string): Omit<LoopRow, 'createdAt' | 'updatedAt'> {
  return {
    projectId,
    loopName: state.loopName,
    status: state.status,
    currentSessionId: state.sessionId,
    worktree: state.worktree ?? false,
    worktreeDir: state.worktreeDir,
    worktreeBranch: state.worktreeBranch ?? null,
    projectDir: state.projectDir ?? state.worktreeDir,
    maxIterations: state.maxIterations,
    iteration: state.iteration,
    auditCount: state.auditCount,
    errorCount: state.errorCount,
    phase: state.phase,
    executionModel: state.executionModel ?? null,
    auditorModel: state.auditorModel ?? null,
    modelFailed: state.modelFailed ?? false,
    sandbox: state.sandbox ?? false,
    sandboxContainer: state.sandboxContainer ?? null,
    startedAt: new Date(state.startedAt).getTime(),
    completedAt: state.completedAt ? new Date(state.completedAt).getTime() : null,
    terminationReason: state.terminationReason ?? null,
    completionSummary: state.completionSummary ?? null,
    workspaceId: state.workspaceId ?? null,
    hostSessionId: state.hostSessionId ?? null,
    executorSessionId: state.executorSessionId ?? null,
    auditorFallbackIndex: state.auditorFallbackIndex ?? 0,
    currentSectionIndex: state.currentSectionIndex,
    totalSections: state.totalSections,
    finalAuditDone: state.finalAuditDone ? 1 : 0,
    executionVariant: state.executionVariant ?? null,
    auditorVariant: state.auditorVariant ?? null,
    kind: state.kind ?? 'plan',
  }
}
